# CogniSense

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
backend/: alembic.ini  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: exceptions.py  logging.py
backend/app/db/: __init__.py  engine.py
backend/app/models/: feature_record.py  prediction.py  session.py
backend/app/schemas/: capture.py  common.py  load.py
backend/tests/: conftest.py  test_capture.py  test_load.py  test_services.py
capture/: __init__.py  audio_capture.py  keystroke_logger.py  mouse_tracker.py  session_manager.py  webcam_capture.py
configs/: default.yaml  development.yaml  logging.yaml  production.yaml
docs/: api_reference.md  architecture.md  deployment_guide.md  feature_catalog.md  module_plan.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.js
ml/: Dockerfile  requirements.txt
ml/configs/: feature_config.yaml  train_config.yaml
ml/features/: __init__.py  audio_features.py  behavioral_features.py  fusion.py  visual_features.py
ml/models/: ensemble.py  random_forest.py  svm_clf.py  xgboost_clf.py
ml/training/: __init__.py  cross_val.py  evaluate.py  synthetic_labeler.py  train.py
scripts/: generate_synthetic_data.py  seed_db.py  setup_env.ps1  setup_env.sh
(+22 files in other folders)
